crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__intent_edit.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
45 00 00 00 06 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 01 e7 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17 02 10 00 00 00 00 00 00 00
00 00 00 00 00 00 00 01 e7 0f 74 68 65 6e 20 74
68 65 20 52 45 41 44 4d 45
