crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__intent_release.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
2a 00 00 00 06 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 01 e7 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17 06 05 61 73 6b 2d 31
