crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__intent_seen.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
25 00 00 00 06 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 01 e7 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17 12 03
