crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__intent_send_after.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
50 00 00 00 06 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 01 e7 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17 00 16 52 65 76 69 65 77 20
77 68 61 74 20 69 74 20 63 68 61 6e 67 65 64 03
10 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
9a 90 4e 00
